--- a/src/schema/objects/extensions.yaml
+++ b/src/schema/objects/extensions.yaml
@@ -1,5 +1,11 @@
 ---
 # This file describes valid file extensions in the specification.
+avi:
+  value: .avi
+  display_name: Audio Video Interleave
+  description: |
+    An [Audio Video Interleave](https://en.wikipedia.org/wiki/Audio_Video_Interleave) video file.
+    This format is commonly used for behavioral video recordings.
 ave:
   value: .ave
   display_name: AVE # not sure what ave stands for
@@ -153,6 +159,24 @@ md:
   display_name: Markdown
   description: |
     A Markdown file.
+mkv:
+  value: .mkv
+  display_name: Matroska Video
+  description: |
+    A [Matroska](https://www.matroska.org/) video container file.
+    This format is commonly used for behavioral video recordings.
+mp3:
+  value: .mp3
+  display_name: MPEG Audio Layer III
+  description: |
+    An [MP3](https://en.wikipedia.org/wiki/MP3) audio file.
+    This format is commonly used for behavioral audio recordings.
+mp4:
+  value: .mp4
+  display_name: MPEG-4 Part 14
+  description: |
+    An [MPEG-4 Part 14](https://en.wikipedia.org/wiki/MPEG-4_Part_14) video container file.
+    This format is commonly used for behavioral video recordings and may contain both video and audio streams.
 mefd:
   value: .mefd/
   display_name: Multiscale Electrophysiology File Format Version 3.0
@@ -286,6 +310,12 @@ tsv_gz:
     A gzipped tab-delimited file.
     This file extension is only used for very large tabular data, such as physiological recordings.
     For smaller data, the unzipped `.tsv` extension is preferred.
+wav:
+  value: .wav
+  display_name: Waveform Audio File Format
+  description: |
+    A [Waveform Audio File Format](https://en.wikipedia.org/wiki/WAV) audio file.
+    This format is commonly used for behavioral audio recordings.
 txt:
   value: .txt
   display_name: Text
