DOCS: Add ignore rule for rrid.site in link checker (#2233)
* Add ignore rule for rrid.site in link checker

* Fix regex for ignoring rrid.site URLs

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,6 +47,7 @@ jobs:
                 --ignore-url 'https://dicomlookup.com/dicomtags/.*' \
                 --ignore-url 'https://www.instagram.com/bidsstandard/' \
                 --ignore-url 'https://jsoneditoronline.org' \
+                --ignore-url 'https://rrid.site.*' \
                 ~/project/site/*html ~/project/site/*/*.html
             else
               echo "Release PR - do nothing"
