--- a/src/schema/rules/checks/func.yaml
+++ b/src/schema/rules/checks/func.yaml
@@ -27,7 +27,7 @@ RepetitionTimeGreaterThan:
     - suffix == "bold"
     - type(sidecar.RepetitionTime) != "null"
   checks:
-    - sidecar.RepetitionTime <= 100
+    - max(sidecar.RepetitionTime) <= 100
 
 # 12
 RepetitionTimeMismatch:
