Revert func change and fix BolusCutOffDelayTime.

--- a/src/schema/rules/checks/asl.yaml
+++ b/src/schema/rules/checks/asl.yaml
@@ -235,7 +235,7 @@ BolusCutOffDelayTimeGreater:
   selectors:
     - sidecar.BolusCutOffDelayTime != null
   checks:
-    - sidecar.BolusCutOffDelayTime <= 10
+    - max(sidecar.BolusCutOffDelayTime) <= 10
 
 # 187
 LabelingDurationGreater:
