Add StartTime field for audio/video metadata in BIDS schema

--- a/src/schema/rules/sidecars/beh.yaml
+++ b/src/schema/rules/sidecars/beh.yaml
@@ -40,6 +40,7 @@ AudioVideoStreams:
     - datatype == "beh"
     - intersects([suffix], ["audio", "video"])
   fields:
+    StartTime__audiovideo: required
     AudioChannelCount: optional
     AudioSampleRate: optional
     FrameRate: optional
