--- a/src/schema/rules/checks/asl.yaml
+++ b/src/schema/rules/checks/asl.yaml
@@ -225,7 +225,7 @@ PostLabelingDelayGreater:
     - suffix == "asl"
     - sidecar.PostLabelingDelay != null
   checks:
-    - sidecar.PostLabelingDelay <= 10
+    - max(sidecar.PostLabelingDelay) <= 10
 
 # 186
 BolusCutOffDelayTimeGreater:
@@ -237,7 +237,7 @@ BolusCutOffDelayTimeGreater:
   selectors:
     - sidecar.BolusCutOffDelayTime != null
   checks:
-    - sidecar.BolusCutOffDelayTime <= 10
+    - max(sidecar.BolusCutOffDelayTime) <= 10
 
 # 187
 LabelingDurationGreater:
@@ -249,7 +249,7 @@ LabelingDurationGreater:
   selectors:
     - sidecar.LabelingDuration != null
   checks:
-    - sidecar.LabelingDuration <= 10
+    - max(sidecar.LabelingDuration) <= 10
 
 # 196
 ASLEchoTimeASLContextLength:
