--- a/src/schema/rules/files/raw/events.yaml
+++ b/src/schema/rules/files/raw/events.yaml
@@ -1,5 +1,6 @@
 ---
 events:
+  $ref: meta.templates.raw.task
   suffixes:
     - events
   extensions:
@@ -11,12 +12,6 @@ events:
     - ieeg
     - meg
     - nirs
-  entities:
-    subject: required
-    session: optional
-    task: required
-    acquisition: optional
-    run: optional
 
 # Specializations
 # In these rules, we use $ref to retrieve most of an object, and then override
@@ -44,20 +39,11 @@ events__pet:
   datatypes:
     - pet
   entities:
-    # Most events allow acquisition, PET doesn't
-    subject: required
-    session: optional
-    task: required
-    tracer: optional
-    reconstruction: optional
-    run: optional
+    $ref: meta.templates.raw.pet.entities
 
 events__mrs:
   $ref: rules.files.raw.events.events
   datatypes:
     - mrs
   entities:
-    $ref: rules.files.raw.events.events.entities
-    reconstruction: optional
-    nucleus: optional
-    volume: optional
+    $ref: meta.templates.raw.mrs.entities
