fix: Raise error on warnings in custom fence

--- a/tools/schemacode/pyproject.toml
+++ b/tools/schemacode/pyproject.toml
@@ -43,6 +43,7 @@ render = [
   "tabulate",
   "pandas",
   "markdown-it-py",
+  "pymdown-extensions>=9.2",
 ]
 tests = [
   "bidsschematools[validation,render,expressions]",
