schema: Add atlas description association

--- a/src/schema/meta/associations.yaml
+++ b/src/schema/meta/associations.yaml
@@ -100,3 +100,12 @@ electrodes:
     entities:
       - space
   inherit: true
+
+atlas_description:
+  selectors:
+    - entities.atlas
+    - extension != '.json'
+  target:
+    suffix: description
+    extension: .json
+  inherit: true
