--- a/src/schema/rules/files/raw/beh.yaml
+++ b/src/schema/rules/files/raw/beh.yaml
@@ -21,9 +21,10 @@ audio:
   suffixes:
     - audio
   extensions:
-    - .mp3
-    - .wav
     - .flac
+    - .mp3
+    - .ogg
+    - .wav
     - .json
   datatypes:
     - beh
