--- a/src/schema/rules/sidecars/derivatives/common_derivatives.yaml
+++ b/src/schema/rules/sidecars/derivatives/common_derivatives.yaml
@@ -23,7 +23,8 @@ SpatialReferenceEntity:
 SpatialReferenceNonStandard:
   selectors:
     - dataset.dataset_description.DatasetType == "derivative"
-    - '!intersects(schema.objects.metadata._StandardTemplateCoordSys, [entities.space])'
+    - '!intersects(schema.objects.enums._StandardTemplateCoordSys.enum, [entities.space])'
+    - type(entities.tpl) == 'null' || !intersects(schema.objects.enums._StandardTemplateCoordSys.enum, [entities.tpl])
   fields:
     SpatialReference: required
 
